--- a/games/tom-and-jerry/main.html
+++ b/games/tom-and-jerry/main.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>Tom and Jerry</h1>
-        <script type="module" src="./script.js"></script>
+        <script type="module" src="./main.js"></script>
     </body>
 </html>
